--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,8 @@
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
     "electron-is-dev": "^2.0.0",
+    "fs": "^0.0.1-security",
+    "path": "^0.12.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
