--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@types/react-dom": "^18.0.0",
     "concurrently": "^7.6.0",
     "cross-env": "^7.0.3",
-    "electron-is-dev": "^2.0.0",
+    "electron-squirrel-startup": "^1.0.0",
     "fs": "^0.0.1-security",
     "papaparse": "^5.4.1",
     "path": "^0.12.7",
@@ -28,24 +28,23 @@
   "main": "public/main.js",
   "homepage": "./",
   "scripts": {
-    "start": "react-scripts start",
+    "start": "electron-forge start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron:serve": "concurrently -k \"cross-env BROWSER=none yarn start\" \"yarn electron:start\"",
     "electron:build": "yarn build && electron-builder -c.extraMetadata.main=build/main.js",
-    "electron:start": "wait-on tcp:3000 && electron ."
+    "electron:start": "wait-on tcp:3000 && electron .",
+    "package": "electron-forge package",
+    "make": "electron-forge make"
   },
-  "build": {
-    "extends": null,
-    "appId": "com.example.electron-cra",
-    "files": [
-      "dist/**/*",
-      "build/**/*",
-      "package.json"
-    ],
-    "directories": {
-      "buildResources": "assets"
+  "config": {
+    "forge": {
+      "packagerConfig": {
+        "ignore": [
+          "node_modules"
+        ]
+      }
     }
   },
   "eslintConfig": {
@@ -67,7 +66,12 @@
     ]
   },
   "devDependencies": {
+    "@electron-forge/cli": "^6.1.1",
+    "@electron-forge/maker-deb": "^6.1.1",
+    "@electron-forge/maker-rpm": "^6.1.1",
+    "@electron-forge/maker-squirrel": "^6.1.1",
+    "@electron-forge/maker-zip": "^6.1.1",
     "electron": "^23.1.4",
-    "electron-builder": "^23.6.0"
+    "electron-is-dev": "^2.0.0"
   }
 }
